<resources>
    <string name="app_name">BD Online News List</string>
    <string name="todo">TODO</string>
    <string name="logoText">TextView</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="button">Register</string>
    <string name="bd_online_news">BD Online News List</string>
    <string name="email1">Email</string>
    <string name="password1">Password</string>
    <string name="login">Login</string>
    <string name="not_a_member">Not a member?</string>
    <string name="signup">Signup</string>
    <string name="login1">Login</string>
    <string name="prothomalo">ProthomAlo</string>
    <string name="imaged">imaged</string>
    <string name="prothom_alo">Prothom Alo</string>
    <string name="todo1">TODO</string>

</resources>
